--- a/index.html
+++ b/index.html
@@ -27,52 +27,52 @@
                             <img src="images/player-1.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Mushfikur Rahim</h5>
-                                <a onclick="selected(this)" href="#" class="btn btn-primary">Select</a>
+                                <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-2.jpg" class="card-img-top" alt="...">
+                            <img src="images/player-2.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Shakib Al Hasan</h5>
-                                <a onclick="selected(this)" href="#" class="btn btn-primary">Select</a>
+                                <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-3.jpg" class="card-img-top" alt="...">
+                            <img src="images/player-3.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Tamim Ikbal</h5>
-                                <a onclick="selected(this)" href="#" class="btn btn-primary">Select</a>
+                                <h5 class="card-title">Tamim Iqbal</h5>
+                                <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-4.jpg" class="card-img-top" alt="...">
+                            <img src="images/player-4.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Mustafiz</h5>
-                                <a onclick="selected(this)" href="#" class="btn btn-primary">Select</a>
+                                <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-5.jpg" class="card-img-top" alt="...">
+                            <img src="images/player-5.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Mortaza</h5>
-                                <a onclick="selected(this)" href="#" class="btn btn-primary">Select</a>
+                                <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-6.jpg" class="card-img-top" alt="...">
+                            <img src="images/player-6.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Soumya Sarker</h5>
-                                <a onclick="selected(this)" href="#" class="btn btn-primary">Select</a>
+                                <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
                             </div>
                         </div>
                     </div>
@@ -81,15 +81,12 @@
             <!-- player section end -->
             <aside>
                 <div>
-                    <h2>Selected- 
+                    <h2>Selected-
                         <span id="total-selected-players">0</span>
                     </h2>
                     <ol id="selected-players">
-                        <!-- <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li> -->
+
+
                     </ol>
                 </div>
 
@@ -104,7 +101,7 @@
                     <button id="calculate" type="button" class="mt-2 btn btn-primary">Calculate</button> <br> <br>
 
                     <p class="d-inline">Player Expenses</p>
-                    <p class="d-inline">$<span id="player-expenses" >0</span></p> <br>
+                    <p class="d-inline">$<span id="player-expenses">0</span></p> <br>
 
                     <div class="input-group">
                         <span class="input-group-text">Manager</span>
@@ -116,7 +113,8 @@
                         <input id="coach" type="text" aria-label="First name" class="form-control">
                     </div>
 
-                    <button id="calculate-total" type="button" class="mt-2 btn btn-primary">Calculate Total</button> <br>
+                    <button id="calculate-total" type="button" class="mt-2 btn btn-primary">Calculate Total</button>
+                    <br>
 
                     <span>Total</span>
                     <span>$
