--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choose your players</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-info p-2 text-dark bg-opacity-10">
     <!-- header start -->
     <header>
-        <h1 class="text-center text-primary">Choose your favourite players</h1>
+        <h1 class="text-center text-primary fw-bold">Choose your favourite players</h1>
     </header>
     <!-- header end -->
 
@@ -24,7 +25,7 @@
                 <div id="btn-select" class="row g-2">
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-1.jpeg" class="card-img-top" alt="...">
+                            <img src="images/player-1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Mushfikur Rahim</h5>
                                 <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
@@ -33,7 +34,7 @@
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-2.jpeg" class="card-img-top" alt="...">
+                            <img src="images/player-2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Shakib Al Hasan</h5>
                                 <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
@@ -42,7 +43,7 @@
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-3.jpeg" class="card-img-top" alt="...">
+                            <img src="images/player-3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Tamim Iqbal</h5>
                                 <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
@@ -51,7 +52,7 @@
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-4.jpeg" class="card-img-top" alt="...">
+                            <img src="images/player-4.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Mustafiz</h5>
                                 <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
@@ -60,7 +61,7 @@
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-5.jpeg" class="card-img-top" alt="...">
+                            <img src="images/player-5.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Mortaza</h5>
                                 <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
@@ -69,9 +70,9 @@
                     </div>
                     <div class="col-4">
                         <div class="card" style="width: 18rem;">
-                            <img src="images/player-6.jpeg" class="card-img-top" alt="...">
+                            <img src="images/player-6.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Soumya Sarker</h5>
+                                <h5 class="card-title">Taskin Ahamed</h5>
                                 <button onclick="selected(this)" type="button" class="btn btn-primary">Select</button>
                             </div>
                         </div>
@@ -81,8 +82,8 @@
             <!-- player section end -->
             <aside>
                 <div>
-                    <h2>Selected-
-                        <span id="total-selected-players">0</span>
+                    <h2 >Selected-
+                        <span class="text-danger" id="total-selected-players">0</span>
                     </h2>
                     <ol id="selected-players">
 
@@ -91,7 +92,7 @@
                 </div>
 
                 <div>
-                    <h2>Budget</h2>
+                    <h2 class="text-primary">Budget</h2>
 
                     <div class="input-group">
                         <span class="input-group-text">Per Player</span>
